--- a/frontend/packages/styles/src/base/layouts/rail.scss
+++ b/frontend/packages/styles/src/base/layouts/rail.scss
@@ -11,6 +11,11 @@
     --nmx-rail-current-width: var(--nmx-rail-collapse-width);
   }
 
+  &--disable-collapsed .nmx-rail-item--active {
+    pointer-events: none;
+    cursor: auto;
+  }
+
   &-list {
     display: flex;
     flex-direction: column;
@@ -53,6 +58,7 @@
   text-align: left;
   white-space: nowrap;
   width: 100%;
+  transition: background-color 0.15s;
 
   @include no-user-select;
 
@@ -83,20 +89,28 @@
   }
 
   &:hover {
-    background: var(--nmx-color-surface-mid);
-  }
-
-  &--active {
     background: var(--nmx-color-surface-high);
   }
 
+  &--active {
+    background: var(--nmx-color-primary);
+
+    &:hover {
+      background: color-mix(
+        in oklab,
+        var(--nmx-color-primary) 85%,
+        var(--nmx-color-mix-darken)
+      );
+    }
+  }
+
   &--active &__label {
-    color: var(--nmx-color-primary);
+    color: var(--nmx-color-on-primary);
     font-weight: var(--nmx-font-weight-bold);
   }
 
   &--active &__btn {
-    color: var(--nmx-color-on-surface);
+    color: var(--nmx-color-on-primary);
   }
 
   &__label {
@@ -129,7 +143,11 @@
       border-radius: var(--nmx-radius-md);
 
       &:hover {
-        background: var(--nmx-color-surface-high);
+        background: color-mix(
+          in oklab,
+          var(--nmx-color-primary) 85%,
+          var(--nmx-color-mix-darken)
+        );
       }
     }
   }
